integrated model with frontend

--- a/mysite/captionapp/templates/upload/upload.html
+++ b/mysite/captionapp/templates/upload/upload.html
@@ -8,22 +8,17 @@
           {% csrf_token %}
           {{ form.image}}
           <button type="submit" class="rounded-border value={{execute_ts}}">Upload</button>
+          <br><br>
+          <label for="feedback">Feedback:</label>
+          <input type="text" id="feedback" name="feedback">
         </form>
       </div>
       <center>
         {% if img_obj %}
-          <h3 class="text-white mt-4" id="result-text">{{description}} <button onclick="myFunction()"><i class="fa fa-volume-up" style="font-size:36px"></i> </button></h3>
           <img class="rounded img-size mt-2" src="{{ img_obj.image.url}}" alt="connect">
+          <h3 class="text-black mt-4" id="result-text">{{caption}}</h3>
         {% endif %}
       </center>
     </div>
-
-    <script>
-    function myFunction() {
-      var msg = new SpeechSynthesisUtterance();
-      msg.text = document.getElementById("result-text").innerHTML
-      window.speechSynthesis.speak(msg);
-    }
-    </script>
 
   {% endblock content %}
