--- a/mysite/captionapp/templates/base.html
+++ b/mysite/captionapp/templates/base.html
@@ -11,9 +11,12 @@
 
     <link href="{% static 'css/main.css'%}" rel="stylesheet"/>
 
-    <title>Image Captioner!</title>
+    <title>Image Caption Generation</title>
   </head>
-  <body>  
+  <body style="background-color: #659DBD;">
+    <div style="text-align:center; background-color:black; color: white;">
+      <h1>Image Caption Generation</h1>
+    </div>
     {% block content %}
     {% endblock %}
   </body>
