--- a/mysite/captionapp/static/css/main.css
+++ b/mysite/captionapp/static/css/main.css
@@ -1,9 +1,5 @@
 body { 
-	background-color: coral;
-}
- 
-.navbar-custom {
-	background-color: #D3D3D3;
+	background-color: #659DBD;
 }
 
 .rounded-border {
@@ -11,15 +7,11 @@ body {
 }
 
 .img-size {
-	height:450px;
-	width: 800px;
-	border: solid black 5px;
+	height:300px;
+	width: 550px;
+	border: solid black 2px;
 }
 
 .align {
 	margin-left:250px;
-}
-
-.padding-left{
-	margin-left:10px;
 }
