--- a/mysite/captionapp/templates/base.html
+++ b/mysite/captionapp/templates/base.html
@@ -15,7 +15,7 @@
   </head>
   <body style="background-color: #659DBD;">
     <div style="text-align:center; background-color:black; color: white;">
-      <h1>Image Caption Generation With Human-in-the-Loop Learning</h1>
+      <h1>Image Caption Generation</h1>
     </div>
     {% block content %}
     {% endblock %}
